# rfinder

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
py_package/environment/: __init__.py  defaults.py  utils.py
rfinder/environment/: __init__.py  defaults.py  generate.py  utils.py
rfinder/net/: Network.py  losses.py  models.py  utils.py
rfinder/plot/: __init__.py  tile.py  utils.py
rfinder/stream/: __init__.py  utils.py  waterfall.py
rfinder/train/: blobs.py
rfinder/tune/: blobs.py  tensorboard.py
rfinder/types/: __init__.py  box.py
rfinder/utils/: merging.py  metrics.py
tests/: test_buffer_utils.py  test_merging.py  test_net.py
